@@ -63,7 +63,7 @@ with the original, as if it was a renaming of the original type.
 
         <center>
         <div class="code">
-                <p class="code">=&gt; subtype int is integer;<br>
+                <p class="code">=&gt; <b>subtype</b> int <b>is</b> integer;<br>
 =&gt; i1 : integer := 1<br>
 =&gt; i2 : int := 2<br>
 =&gt; ? i1 + i2<br>
