@@ -40,3 +40,5 @@ CHANGES SINCE 2.1
 
 18. New. raise statements can have a when clause, like an exit statement. [docs, testing needed]
 
+19. Fix: statements starting with paths like /bin/bash and bin/bash are now recognized as shell commands.
+
